--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ jsonpickle==0.9.5
 Mako==1.0.6
 MarkupSafe==0.23
 packaging==16.8
+phonenumbers==8.8.8
 psycopg2==2.7
 pyparsing==2.1.10
 python-dateutil==2.6.0
@@ -36,4 +37,3 @@ SQLAlchemy==1.1.5
 webassets==0.12.1
 Werkzeug==0.11.15
 WTForms==2.1
-phonenumbers
