--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 alembic==0.8.10
 appdirs==1.4.0
 blinker==1.3
+boto3==1.4.8
+botocore==1.8.9
 click==6.7
+docutils==0.14
 Faker==0.7.7
 Flask==0.12
 Flask-Assets==0.12
@@ -18,6 +21,7 @@ gunicorn==19.6.0
 honcho==0.7.1
 itsdangerous==0.24
 Jinja2==2.9.5
+jmespath==0.9.3
 jsmin==2.2.1
 jsonpickle==0.9.5
 Mako==1.0.6
@@ -32,6 +36,7 @@ raygun4py==3.1.4
 redis==2.10.5
 requests==2.9.1
 rq==0.7.1
+s3transfer==0.1.12
 six==1.10.0
 SQLAlchemy==1.1.5
 webassets==0.12.1
